--- a/index.html
+++ b/index.html
@@ -18,5 +18,7 @@
   <body>
     <button onclick="getGBasedonLocation()">Get local G</button>
     <output></output>
+    <section>
+        * based on <a href="https://www.sensorsone.com/local-gravity-calculator/">https://www.sensorsone.com/local-gravity-calculator/</a>
   </body>
 </html>
