--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <button onclick="getGBasedonLocation()">Get local G</button>
     <output></output>
     <section>
-        * based on <a href="https://www.sensorsone.com/local-gravity-calculator/">https://www.sensorsone.com/local-gravity-calculator/</a>
+      based on
+      <a href="https://www.sensorsone.com/local-gravity-calculator/"
+        >https://www.sensorsone.com/local-gravity-calculator/</a
+      >
+    </section>
   </body>
 </html>
