Add load books example

--- a/index.html
+++ b/index.html
@@ -16,13 +16,22 @@
     <script src="./main.js"></script>
   </head>
   <body>
-    <button onclick="getGBasedonLocation()">Get local G</button>
-    <output></output>
     <section>
-      based on
-      <a href="https://www.sensorsone.com/local-gravity-calculator/"
-        >https://www.sensorsone.com/local-gravity-calculator/</a
-      >
+      <h1>Location based G</h1>
+      <button onclick="getGBasedonLocation()">Calculate G</button>
+      <output></output>
+      <p>
+        based on
+        <a href="https://www.sensorsone.com/local-gravity-calculator/"
+          >https://www.sensorsone.com/local-gravity-calculator/</a
+        >
+      </p>
+    </section>
+    <section>
+      <button onclick="loadBooks()">
+        Load books
+      </button>
+      <pre></pre>
     </section>
   </body>
 </html>
