Add loading to the table

--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
       </button>
       <pre></pre>
     </section>
+    <section>
+      <button onclick="loadBooksToTheTable()">
+        Load books to the table
+      </button>
+      <table></table>
+    </section>
   </body>
 </html>
