--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     </section>
     <section>
       <button onclick="loadBooks()">
-        Load books
+        Load books to console
       </button>
       <pre></pre>
     </section>
     <section>
-      <button onclick="loadBooksToTheTable()">
+      <button onclick="loadAndShowBooks()">
         Load books to the table
       </button>
       <table></table>
