Add simple search

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <button onclick="loadAndShowBooks()">
         Load books to the table
       </button>
+      <input type="search" oninput="updateSearch(this)" />
       <table></table>
     </section>
   </body>
