Add sorting example

--- a/index.html
+++ b/index.html
@@ -4,16 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      html {
-        font-family: monospace;
-        font-size: 2em;
-      }
-      button {
-        font-size: 1em;
-      }
-    </style>
-    <script src="./main.js"></script>
+    <script src="main.js"></script>
   </head>
   <body>
     <section>
@@ -37,7 +28,7 @@
       <button onclick="loadAndShowBooks()">
         Load books to the table
       </button>
-      <input type="search" oninput="updateSearch(this)" />
+      <input type="search" oninput="updateSearch(this.value)" />
       <table></table>
     </section>
   </body>
